Critical Connections in a Network